Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38999

[REG 4 -> 5] In MDI having QGLWidget leaves artifacts when scrolling

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.1
    • 5.2.1
    • Widgets: Main Window
    • Windows 7 64 bit using Visual Studio 2012 / MinGW, precompiled versions, Linux
    • 3478ec29494c315c4e41f25a1265da928503694b (stable , 28.5.2014. 5.3.1)

      Having a QGLWidget to an MdiArea where scrollbars are enabled leaves artifacts when you scroll using Scrollbars.

      Attached example reproduces it.
      In this example move one of the windows out of bounds and scroll to see artifacts.

      Steps to reproduce:

      • Launch qtbug38999, scroll horizontally. Note the subwindows are not moved at all.
      • Same happens for a native Non-GL-widget (options -no-gl -n).
      • Compare to QScrollArea: Works fine (option -s)

        1. 2014-05-07 12_20_18-MdiTest.png
          2014-05-07 12_20_18-MdiTest.png
          17 kB
        2. 2014-05-07 12_20_52-MdiTest.png
          2014-05-07 12_20_52-MdiTest.png
          17 kB
        3. 2014-05-07 12_21_10-MdiTest.png
          2014-05-07 12_21_10-MdiTest.png
          15 kB
        4. mditest.zip
          2 kB
        5. qtbug38999.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes